--- a/details.html
+++ b/details.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="ja">
 
 <head>
     <!-- Required meta tags -->
@@ -58,7 +58,7 @@
 
     <!-- Details summary -->
     <div id="summary-container" class="container">
-        <h1 id="summary-title" class="text-center mb-5">Everything about Sumiyoshi</h1>
+        <h1 id="summary-title" class="text-center mb-5">住吉の情報</h1>
 
         <h3 id="summary-area" class="mb-3">Sumiyoshi</h3>
 
@@ -81,34 +81,34 @@
 
                     <ul>
                         <li>
-                            <a href="#population-anchor" id="population" class="get-data">Population:
+                            <a href="#population-anchor" id="population" class="get-data">人口
                                 <span>25,000</span></a>
                         </li>
 
                         <li>
-                            <a href="#noise-anchor" id="noise" class="get-data">Noise: <span>Moderate</span></a>
+                            <a href="#noise-anchor" id="noise" class="get-data">騒音レベル: <span>中</span></a>
                         </li>
 
                         <div class="bar-container">
-                            <div id="noise-score" class="bar">Moderate</div>
+                            <div id="noise-score" class="bar">中</div>
                         </div>
 
                         <li>
                             <a href="#traffic-accident-anchor" id="traffic-accident-rate" class="get-data">
-                                Traffic accident rate: <span>Pretty high</span>
+                                交通事故発生率: <span>かなり高い</span>
                             </a>
                         </li>
 
                         <div class="bar-container">
-                            <div id="traffic-accident-score" class="bar">Pretty high</div>
+                            <div id="traffic-accident-score" class="bar">かなり高い</div>
                         </div>
 
                         <li>
-                            <a href="#crime-anchor" id="crime-rate" class="get-data">Crime rate: <span>High</span></a>
+                            <a href="#crime-anchor" id="crime-rate" class="get-data">犯罪発生率: <span>高い</span></a>
                         </li>
 
                         <div class="bar-container">
-                            <div id="crime-score" class="bar">High</div>
+                            <div id="crime-score" class="bar">高い</div>
                         </div>
                     </ul>
                 </div>
@@ -335,80 +335,74 @@
         <div class="container">
             <div class="row mx-auto justify-content-center pt-4">
                 <div class="col-md-3 row justify-content-center">
-                    <h5 class="col-12">What is Sumunara?</h5>
+                    <h5 class="col-12">住みたい</h5>
 
                     <ul class="list-unstyled col-12">
                         <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
+                            <a href="#">北九州</a>
                         </li>
 
                         <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
+                            <a href="#">福岡</a>
                         </li>
 
                         <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
+                            <a href="#">筑豊</a>
                         </li>
 
                         <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
+                            <a href="#">筑後</a>
+                        </li>
+
+                    </ul>
+                </div>
+
+                <div class="col-md-3 row justify-content-center">
+                    <h5 class="col-12">知りたい</h5>
+
+                    <ul class="list-unstyled col-12">
+                        <li>
+                            <a href="#">飲食店</a>
                         </li>
 
                         <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
+                            <a href="#">イベント</a>
+                        </li>
+
+                        <li>
+                            <a href="#">環境</a>
+                        </li>
+
+                        <li>
+                            <a href="#">治安・安全</a>
+                        </li>
+
+                        <li>
+                            <a href="#">入園・入学</a>
                         </li>
                     </ul>
                 </div>
 
                 <div class="col-md-3 row justify-content-center">
-                    <h5 class="col-12">What is Sumunara?</h5>
+                    <h5 class="col-12">コラム</h5>
 
                     <ul class="list-unstyled col-12">
                         <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
+                            <a href="#">お問い合わせ</a>
                         </li>
 
                         <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
+                            <a href="#">サイトからのお知らせ</a>
                         </li>
 
                         <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
+                            <a href="#">ヘルプ</a>
                         </li>
 
                         <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
+                            <a href="#">サイトマップ</a>
                         </li>
 
-                        <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
-                        </li>
-                    </ul>
-                </div>
-
-                <div class="col-md-3 row justify-content-center">
-                    <h5 class="col-12">What is Sumunara?</h5>
-
-                    <ul class="list-unstyled col-12">
-                        <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
-                        </li>
-
-                        <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
-                        </li>
-
-                        <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
-                        </li>
-
-                        <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
-                        </li>
-
-                        <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
-                        </li>
                     </ul>
                 </div>
             </div>
