--- a/error.html
+++ b/error.html
@@ -58,11 +58,11 @@
         <span class="four"><span class="screen-reader-text">4</span></span>
         <span class="zero"><span class="screen-reader-text">0</span></span>
         <span class="four"><span class="screen-reader-text">4</span></span>
-        <p class="zoom-area"><b>Oops!</b> The page you're looging for doesn't exist.</p>
+        <p class="zoom-area"><b>おっと!</b>探しているページはありませんでした…。</p>
     </section>
 
     <div id="link-container">
-        <a href="index.html" class="more-link">Go home</a>
+        <a href="index.html" class="more-link">HOMEに戻る</a>
     </div>
     <!-- Error -->
 
@@ -71,80 +71,74 @@
         <div class="container">
             <div class="row mx-auto justify-content-center pt-4">
                 <div class="col-md-3 row justify-content-center">
-                    <h5 class="col-12">What is Sumunara?</h5>
+                    <h5 class="col-12">住みたい</h5>
 
                     <ul class="list-unstyled col-12">
                         <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
+                            <a href="#">北九州</a>
                         </li>
 
                         <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
+                            <a href="#">福岡</a>
                         </li>
 
                         <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
+                            <a href="#">筑豊</a>
                         </li>
 
                         <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
+                            <a href="#">筑後</a>
+                        </li>
+
+                    </ul>
+                </div>
+
+                <div class="col-md-3 row justify-content-center">
+                    <h5 class="col-12">知りたい</h5>
+
+                    <ul class="list-unstyled col-12">
+                        <li>
+                            <a href="#">飲食店</a>
                         </li>
 
                         <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
+                            <a href="#">イベント</a>
+                        </li>
+
+                        <li>
+                            <a href="#">環境</a>
+                        </li>
+
+                        <li>
+                            <a href="#">治安・安全</a>
+                        </li>
+
+                        <li>
+                            <a href="#">入園・入学</a>
                         </li>
                     </ul>
                 </div>
 
                 <div class="col-md-3 row justify-content-center">
-                    <h5 class="col-12">What is Sumunara?</h5>
+                    <h5 class="col-12">コラム</h5>
 
                     <ul class="list-unstyled col-12">
                         <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
+                            <a href="#">お問い合わせ</a>
                         </li>
 
                         <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
+                            <a href="#">サイトからのお知らせ</a>
                         </li>
 
                         <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
+                            <a href="#">ヘルプ</a>
                         </li>
 
                         <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
+                            <a href="#">サイトマップ</a>
                         </li>
 
-                        <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
-                        </li>
-                    </ul>
-                </div>
-
-                <div class="col-md-3 row justify-content-center">
-                    <h5 class="col-12">What is Sumunara?</h5>
-
-                    <ul class="list-unstyled col-12">
-                        <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
-                        </li>
-
-                        <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
-                        </li>
-
-                        <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
-                        </li>
-
-                        <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
-                        </li>
-
-                        <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
-                        </li>
                     </ul>
                 </div>
             </div>
