--- a/signup.html
+++ b/signup.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="ja">
 
 <head>
     <!-- Required meta tags -->
@@ -60,44 +60,44 @@
     <form id="signup-container">
         <h3>Sign up</h3>
 
-        <p>Sign up with your social media account</p>
+        <p>ソーシャルメディアアカウントでサインアップする</p>
 
         <div id="social-icons">
             <button id="google" class="btn">
                 <div class="col-2"><i class="fab fa-google"></i></div>
 
-                <div class="col-10 mx-auto"> Sign up with Google</div>
+                <div class="col-10 mx-auto">Googleでサインアップ</div>
             </button>
 
             <button id="facebook" class="btn">
                 <div class="col-2"><i class="fab fa-facebook-f"></i></div>
 
-                <div class="col-10 mx-auto"> Sign up with Facebook</div>
+                <div class="col-10 mx-auto">Facebookでサインアップ</div>
             </button>
 
             <button id="twitter" class="btn">
                 <div class="col-2"><i class="fab fa-twitter"></i></div>
 
-                <div class="col-10 mx-auto"> Sign up with Twitter</div>
+                <div class="col-10 mx-auto">Twitterでサインアップ</div>
             </button>
 
             <button id="instagram" class="btn">
                 <div class="col-2"><i class="fab fa-instagram"></i></div>
 
-                <div class="col-10 mx-auto"> Sign up with Instagram</div>
+                <div class="col-10 mx-auto">Instagramでサインアップ</div>
             </button>
 
             <button id="github" class="btn">
                 <div class="col-2"><i class="fab fa-github"></i></div>
 
-                <div class="col-10 mx-auto"> Sign up with GitHub</div>
+                <div class="col-10 mx-auto">GitHubでサインアップ</div>
             </button>
         </div>
 
-        <p>Or</p>
+        <p>または</p>
 
         <button id="show-form-btn" class="btn" type="button">
-            <i class="far fa-envelope"></i> Sign up with Email
+            <i class="far fa-envelope"></i>メールでサインアップ
         </button>
 
         <div id="form-email">
@@ -183,80 +183,74 @@
         <div class="container">
             <div class="row mx-auto justify-content-center pt-4">
                 <div class="col-md-3 row justify-content-center">
-                    <h5 class="col-12">What is Sumunara?</h5>
+                    <h5 class="col-12">住みたい</h5>
 
                     <ul class="list-unstyled col-12">
                         <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
+                            <a href="#">北九州</a>
                         </li>
 
                         <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
+                            <a href="#">福岡</a>
                         </li>
 
                         <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
+                            <a href="#">筑豊</a>
                         </li>
 
                         <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
+                            <a href="#">筑後</a>
+                        </li>
+
+                    </ul>
+                </div>
+
+                <div class="col-md-3 row justify-content-center">
+                    <h5 class="col-12">知りたい</h5>
+
+                    <ul class="list-unstyled col-12">
+                        <li>
+                            <a href="#">飲食店</a>
                         </li>
 
                         <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
+                            <a href="#">イベント</a>
+                        </li>
+
+                        <li>
+                            <a href="#">環境</a>
+                        </li>
+
+                        <li>
+                            <a href="#">治安・安全</a>
+                        </li>
+
+                        <li>
+                            <a href="#">入園・入学</a>
                         </li>
                     </ul>
                 </div>
 
                 <div class="col-md-3 row justify-content-center">
-                    <h5 class="col-12">What is Sumunara?</h5>
+                    <h5 class="col-12">コラム</h5>
 
                     <ul class="list-unstyled col-12">
                         <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
+                            <a href="#">お問い合わせ</a>
                         </li>
 
                         <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
+                            <a href="#">サイトからのお知らせ</a>
                         </li>
 
                         <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
+                            <a href="#">ヘルプ</a>
                         </li>
 
                         <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
+                            <a href="#">サイトマップ</a>
                         </li>
 
-                        <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
-                        </li>
-                    </ul>
-                </div>
-
-                <div class="col-md-3 row justify-content-center">
-                    <h5 class="col-12">What is Sumunara?</h5>
-
-                    <ul class="list-unstyled col-12">
-                        <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
-                        </li>
-
-                        <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
-                        </li>
-
-                        <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
-                        </li>
-
-                        <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
-                        </li>
-
-                        <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
-                        </li>
                     </ul>
                 </div>
             </div>
