--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <section id="what-is-sumunara">
         <div class="container">
             <div class="h-200 row align-items-center justify-content-center text-center">
-                <h1>What is sumunara?</h1>
+                <h1>Sumunaraとは?</h1>
             </div>
 
             <div class="container">
@@ -85,11 +85,9 @@
                         <div class="card fade-in" data-delay="0s">
                             <img class="card-img-top" src="images/house-24px.svg" alt="house">
                             <div class="card-body text-center">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk
-                                    of
-                                    the card's content.</p>
+                                <h5 class="card-title">住みたい街が見つかる</h5>
+                                <p class="card-text">住所から周辺情報を検索。交通や治安、
+                                  スーパー、コンビニ、騒音等、住まいに関する情報をお届けします。</p>
                             </div>
                         </div>
                     </div>
@@ -98,11 +96,9 @@
                         <div class="card fade-in" data-delay=".25s">
                             <img class="card-img-top" src="images/house-24px.svg" alt="house">
                             <div class="card-body text-center">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk
-                                    of
-                                    the card's content.</p>
+                                <h5 class="card-title">あなたに合った街を探します</h5>
+                                <p class="card-text">街に住む上であなたが重視することはどんなことですか？
+                                  事前に登録しておくことであなたの希望に合った街が検索しやすくなります。</p>
                             </div>
                         </div>
                     </div>
@@ -111,11 +107,9 @@
                         <div class="card fade-in" data-delay=".7s">
                             <img class="card-img-top" src="images/house-24px.svg" alt="house">
                             <div class="card-body text-center">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk
-                                    of
-                                    the card's content.</p>
+                                <h5 class="card-title">新しい発見</h5>
+                                <p class="card-text">自分の住む街でも意外と知らない魅力が隠れているものです。
+                                どんなイベントがあるのか？どんなお店があるのか？たくさん知って、自分の住む街をもっと好きになりませんか？</p>
                             </div>
                         </div>
                     </div>
@@ -123,7 +117,7 @@
             </div>
 
             <div class="h-100px row align-items-center justify-content-center">
-                <button class="btn btn-warning">Learn more</button>
+                <button class="btn btn-warning">もっと詳しく</button>
             </div>
         </div>
     </section>
@@ -133,7 +127,7 @@
     <section id="areas">
         <div class="container mx-auto">
             <div class="h-200 row align-items-center justify-content-center text-center">
-                <h1>Lorem ipsum dolor sit amet.</h1>
+                <h1>街の最新情報</h1>
             </div>
         </div>
 
@@ -142,15 +136,15 @@
                 <div class="col-lg-6">
                     <div class="media mx-auto">
                         <a href="#" class="row align-items-center">
-                            <img data-src="https://source.unsplash.com/400x300/?castle"
+                            <img data-src=".\images\Ivent.jpg"
                                 class="img-fluid col-12 col-md-6 mx-auto" alt="Generic placeholder image">
 
                             <div class="media-body row col-12 col-md-6 mx-auto">
-                                <h5 class="mt-2">Media heading</h5>
+                                <h5 class="mt-2">注目イベント！</h5>
 
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem cumque praesentium
-                                    nulla
-                                    nobis, harum illum.</p>
+                                <p>福岡で開催される注目のイベントを掲載しています。
+                                </p>
+                                <!-- 抽象的なパターン -->
                             </div>
                         </a>
                     </div>
@@ -159,53 +153,13 @@
                 <div class="col-lg-6">
                     <div class="media mx-auto">
                         <a href="#" class="row align-items-center">
-                            <img data-src="https://source.unsplash.com/400x300/?forest"
+                            <img data-src="./images/AttentionCtiy.jpg"
                                 class="img-fluid col-sm-6 mx-auto" alt="Generic placeholder image">
 
                             <div class="media-body row col-sm-6 mx-auto">
-                                <h5 class="mt-2">Media heading</h5>
+                                <h5 class="mt-2">注目の地域ランキング</h5>
 
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem cumque praesentium
-                                    nulla
-                                    nobis, harum illum.</p>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="container mx-auto">
-            <div class="row justify-content-center">
-                <div class="col-lg-6">
-                    <div class="media mx-auto">
-                        <a href="#" class="row align-items-center">
-                            <img data-src="https://source.unsplash.com/400x300/?desert"
-                                class="img-fluid col-12 col-md-6 mx-auto" alt="Generic placeholder image">
-
-                            <div class="media-body row col-12 col-md-6 mx-auto">
-                                <h5 class="mt-2">Media heading</h5>
-
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem cumque praesentium
-                                    nulla
-                                    nobis, harum illum.</p>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-
-                <div class="col-lg-6">
-                    <div class="media mx-auto">
-                        <a href="#" class="row align-items-center">
-                            <img data-src="https://source.unsplash.com/400x300/?oldtown"
-                                class="img-fluid col-sm-6 mx-auto" alt="Generic placeholder image">
-
-                            <div class="media-body row col-sm-6 mx-auto">
-                                <h5 class="mt-2">Media heading</h5>
-
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem cumque praesentium
-                                    nulla
-                                    nobis, harum illum.</p>
+                                <p>アクセスの多い地域のTOP10！どんなところが魅力なの？を一目で確認しましょう！</p>
                             </div>
                         </a>
                     </div>
@@ -218,15 +172,15 @@
                 <div class="col-lg-6">
                     <div class="media mx-auto">
                         <a href="#" class="row align-items-center">
-                            <img data-src="https://source.unsplash.com/400x300/?city"
+                            <img data-src="./images/School.jpg"
                                 class="img-fluid col-12 col-md-6 mx-auto" alt="Generic placeholder image">
 
                             <div class="media-body row col-12 col-md-6 mx-auto">
-                                <h5 class="mt-2">Media heading</h5>
+                                <h5 class="mt-2">地域別-学校数ランキング</h5>
 
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem cumque praesentium
-                                    nulla
-                                    nobis, harum illum.</p>
+                                <p>小・中・高の学校それぞれ校数を、地域別にランキング化しました。
+                                </p>
+                                <!--違う形で提供した方がいいかも-->
                             </div>
                         </a>
                     </div>
@@ -235,15 +189,53 @@
                 <div class="col-lg-6">
                     <div class="media mx-auto">
                         <a href="#" class="row align-items-center">
-                            <img data-src="https://source.unsplash.com/400x300/?universe"
+                            <img data-src="./images/Dust.jpg"
                                 class="img-fluid col-sm-6 mx-auto" alt="Generic placeholder image">
 
                             <div class="media-body row col-sm-6 mx-auto">
-                                <h5 class="mt-2">Media heading</h5>
+                                <h5 class="mt-2">地域別-ゴミの収集日一覧</h5>
 
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem cumque praesentium
-                                    nulla
-                                    nobis, harum illum.</p>
+                                <p>地域ごとに決まっているゴミの収集日を一覧にしてまとめました。
+                                </p>
+                                <!--掲載する場所変える？範囲が広すぎるからリンクを張るだけでも良さげ。-->
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container mx-auto">
+            <div class="row justify-content-center">
+                <div class="col-lg-6">
+                    <div class="media mx-auto">
+                        <a href="#" class="row align-items-center">
+                            <img data-src="./images/Gourmet.jpg"
+                                class="img-fluid col-12 col-md-6 mx-auto" alt="Generic placeholder image">
+
+                            <div class="media-body row col-12 col-md-6 mx-auto">
+                                <h5 class="mt-2">人気グルメ店ランキング</h5>
+
+                                <p>福岡の人気グルメ店をランキング形式でまとめました。
+                                近くにこんなお店が！少し遠いけど行ってみたい！などなどたくさんの美味しいを発見しましょう！</p>
+                                <!--鉄板ネタ-->
+                            </div>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="col-lg-6">
+                    <div class="media mx-auto">
+                        <a href="#" class="row align-items-center">
+                            <img data-src="./images/Bar.jpg"
+                                class="img-fluid col-sm-6 mx-auto" alt="Generic placeholder image">
+
+                            <div class="media-body row col-sm-6 mx-auto">
+                                <h5 class="mt-2">地域別-居酒屋最安値はどこ？</h5>
+
+                                <p>どうせなら安くてたくさんお酒が飲めたほうがいいですよね？
+                                そんな情報を地域別にまとめました！</p>
+                                    <!--酒飲み達をターゲット。専用サイト作った方がいいかも。-->
                             </div>
                         </a>
                     </div>
@@ -251,6 +243,7 @@
             </div>
         </div>
     </section>
+    <!-- Sectionは横スライドショーにするのもありかも。-->
     <!-- Section - Areas -->
 
     <!-- Footer -->
@@ -258,80 +251,74 @@
         <div class="container">
             <div class="row mx-auto justify-content-center pt-4">
                 <div class="col-md-3">
-                    <h5 class="col-12">What is Sumunara?</h5>
+                    <h5 class="col-12">住みたい</h5>
 
                     <ul class="list-unstyled col-12">
                         <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
+                            <a href="#">北九州</a>
                         </li>
 
                         <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
+                            <a href="#">福岡</a>
                         </li>
 
                         <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
+                            <a href="#">筑豊</a>
                         </li>
 
                         <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
+                            <a href="#">筑後</a>
+                        </li>
+
+                    </ul>
+                </div>
+
+                <div class="col-md-3">
+                    <h5 class="col-12">知りたい</h5>
+
+                    <ul class="list-unstyled col-12">
+                        <li>
+                            <a href="#">飲食店</a>
                         </li>
 
                         <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
+                            <a href="#">イベント</a>
+                        </li>
+
+                        <li>
+                            <a href="#">環境</a>
+                        </li>
+
+                        <li>
+                            <a href="#">治安・安全</a>
+                        </li>
+
+                        <li>
+                            <a href="#">入園・入学</a>
                         </li>
                     </ul>
                 </div>
 
                 <div class="col-md-3">
-                    <h5 class="col-12">What is Sumunara?</h5>
+                    <h5 class="col-12">コラム</h5>
 
                     <ul class="list-unstyled col-12">
                         <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
+                            <a href="#">お問い合わせ</a>
                         </li>
 
                         <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
+                            <a href="#">サイトからのお知らせ</a>
                         </li>
 
                         <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
+                            <a href="#">ヘルプ</a>
                         </li>
 
                         <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
+                            <a href="#">サイトマップ</a>
                         </li>
 
-                        <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
-                        </li>
-                    </ul>
-                </div>
-
-                <div class="col-md-3">
-                    <h5 class="col-12">What is Sumunara?</h5>
-
-                    <ul class="list-unstyled col-12">
-                        <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
-                        </li>
-
-                        <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
-                        </li>
-
-                        <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
-                        </li>
-
-                        <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
-                        </li>
-
-                        <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
-                        </li>
                     </ul>
                 </div>
             </div>
@@ -341,6 +328,7 @@
             </div>
         </div>
     </footer>
+    <!-- Footerはコンテンツごとにスライドダウンさせてメニューを表示させる -->
     <!-- Footer -->
 
     <!-- Optional JavaScript -->
