--- a/login.html
+++ b/login.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="ja">
 
 <head>
     <!-- Required meta tags -->
@@ -56,24 +56,24 @@
     <!-- Log in -->
     <form id="login-container">
         <div class="form-group">
-            <label for="inputUserName">Username or email</label>
+            <label for="inputUserName">ユーザー名 もしくは メールアドレス</label>
 
             <input type="text" class="form-control" id="inputUserName">
         </div>
 
         <div class="form-group">
-            <label for="inputPassword">Password</label>
+            <label for="inputPassword">パスワード</label>
 
             <input type="password" id="inputPassword" class="form-control" aria-describedby="passwordHelpBlock">
         </div>
 
         <div class="form-group">
-            <label class="form-check-label"><input type="checkbox"> Remember me</label>
+            <label class="form-check-label"><input type="checkbox">保存する</label>
         </div>
 
         <button type="submit" class="btn btn-warning">Log in</button>
 
-        <p>or <a href="#">Forgot password</a></p>
+        <p><a href="#">パスワードを忘れた</a></p>
     </form>
     <!-- Log in -->
 
@@ -82,80 +82,74 @@
         <div class="container">
             <div class="row mx-auto justify-content-center pt-4">
                 <div class="col-md-3 row justify-content-center">
-                    <h5 class="col-12">What is Sumunara?</h5>
+                    <h5 class="col-12">住みたい</h5>
 
                     <ul class="list-unstyled col-12">
                         <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
+                            <a href="#">北九州</a>
                         </li>
 
                         <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
+                            <a href="#">福岡</a>
                         </li>
 
                         <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
+                            <a href="#">筑豊</a>
                         </li>
 
                         <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
+                            <a href="#">筑後</a>
+                        </li>
+
+                    </ul>
+                </div>
+
+                <div class="col-md-3 row justify-content-center">
+                    <h5 class="col-12">知りたい</h5>
+
+                    <ul class="list-unstyled col-12">
+                        <li>
+                            <a href="#">飲食店</a>
                         </li>
 
                         <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
+                            <a href="#">イベント</a>
+                        </li>
+
+                        <li>
+                            <a href="#">環境</a>
+                        </li>
+
+                        <li>
+                            <a href="#">治安・安全</a>
+                        </li>
+
+                        <li>
+                            <a href="#">入園・入学</a>
                         </li>
                     </ul>
                 </div>
 
                 <div class="col-md-3 row justify-content-center">
-                    <h5 class="col-12">What is Sumunara?</h5>
+                    <h5 class="col-12">コラム</h5>
 
                     <ul class="list-unstyled col-12">
                         <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
+                            <a href="#">お問い合わせ</a>
                         </li>
 
                         <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
+                            <a href="#">サイトからのお知らせ</a>
                         </li>
 
                         <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
+                            <a href="#">ヘルプ</a>
                         </li>
 
                         <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
+                            <a href="#">サイトマップ</a>
                         </li>
 
-                        <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
-                        </li>
-                    </ul>
-                </div>
-
-                <div class="col-md-3 row justify-content-center">
-                    <h5 class="col-12">What is Sumunara?</h5>
-
-                    <ul class="list-unstyled col-12">
-                        <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
-                        </li>
-
-                        <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
-                        </li>
-
-                        <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
-                        </li>
-
-                        <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
-                        </li>
-
-                        <li>
-                            <a href="#">Lorem ipsum dolor sit amet.</a>
-                        </li>
                     </ul>
                 </div>
             </div>
