内容の差し替え #2

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="ja">
 
 <head>
     <!-- Required meta tags -->
@@ -33,19 +33,19 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="index.html">ホーム <span class="sr-only">(current)</span></a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="login.html">Log in</a>
+                        <a class="nav-link" href="login.html">ログイン</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="signup.html">Sign up</a>
+                        <a class="nav-link" href="signup.html">アカウント作成</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Log out</a>
+                        <a class="nav-link" href="#">ログアウト</a>
                     </li>
                 </ul>
             </div>
@@ -83,33 +83,30 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="card fade-in" data-delay="0s">
-                            <img class="card-img-top" src="images/house-24px.svg" alt="house">
+                            <img class="card-img-top" src="./images/icons/index_what-is-sumuna_icon1.png" alt="house">
                             <div class="card-body text-center">
                                 <h5 class="card-title">住みたい街が見つかる</h5>
-                                <p class="card-text">住所から周辺情報を検索。交通や治安、
-                                  スーパー、コンビニ、騒音等、住まいに関する情報をお届けします。</p>
+                                <p class="card-text">住所から周辺情報を簡単に検索できます。<br>交通や治安、コンビニやスーパー、騒音等、住まいに関する情報をお届けします。</p>
                             </div>
                         </div>
                     </div>
 
                     <div class="col-lg-4">
                         <div class="card fade-in" data-delay=".25s">
-                            <img class="card-img-top" src="images/house-24px.svg" alt="house">
+                            <img class="card-img-top" src="./images/icons/index_what-is-sumuna_icon2.png" alt="house">
                             <div class="card-body text-center">
                                 <h5 class="card-title">あなたに合った街を探します</h5>
-                                <p class="card-text">街に住む上であなたが重視することはどんなことですか？
-                                  事前に登録しておくことであなたの希望に合った街が検索しやすくなります。</p>
+                                <p class="card-text">街に住む上であなたが重視することはどんなことですか？<br>事前に登録しておくことであなたの希望に合った街が検索しやすくなります。</p>
                             </div>
                         </div>
                     </div>
 
                     <div class="col-lg-4">
                         <div class="card fade-in" data-delay=".7s">
-                            <img class="card-img-top" src="images/house-24px.svg" alt="house">
+                            <img class="card-img-top" src="./images/icons/index_what-is-sumuna_icon3.png" alt="house">
                             <div class="card-body text-center">
                                 <h5 class="card-title">新しい発見</h5>
-                                <p class="card-text">自分の住む街でも意外と知らない魅力が隠れているものです。
-                                どんなイベントがあるのか？どんなお店があるのか？たくさん知って、自分の住む街をもっと好きになりませんか？</p>
+                                <p class="card-text">自分の住む街でも意外と知らない魅力が隠れているものです。<br>どんなイベントがあるのか？どんなお店があるのか？<br>たくさん知って、自分の住む街をもっと好きになりませんか？</p>
                             </div>
                         </div>
                     </div>
@@ -136,11 +133,11 @@
                 <div class="col-lg-6">
                     <div class="media mx-auto">
                         <a href="#" class="row align-items-center">
-                            <img data-src=".\images\Ivent.jpg"
+                            <img data-src=".\images\index_areas_image1.jpg"
                                 class="img-fluid col-12 col-md-6 mx-auto" alt="Generic placeholder image">
 
                             <div class="media-body row col-12 col-md-6 mx-auto">
-                                <h5 class="mt-2">注目イベント！</h5>
+                                <h5 class="mt-2">注目イベント</h5>
 
                                 <p>福岡で開催される注目のイベントを掲載しています。
                                 </p>
@@ -153,7 +150,7 @@
                 <div class="col-lg-6">
                     <div class="media mx-auto">
                         <a href="#" class="row align-items-center">
-                            <img data-src="./images/AttentionCtiy.jpg"
+                            <img data-src="./images/index_areas_image2.jpg"
                                 class="img-fluid col-sm-6 mx-auto" alt="Generic placeholder image">
 
                             <div class="media-body row col-sm-6 mx-auto">
@@ -172,11 +169,11 @@
                 <div class="col-lg-6">
                     <div class="media mx-auto">
                         <a href="#" class="row align-items-center">
-                            <img data-src="./images/School.jpg"
+                            <img data-src="./images/index_areas_image3.jpg"
                                 class="img-fluid col-12 col-md-6 mx-auto" alt="Generic placeholder image">
 
                             <div class="media-body row col-12 col-md-6 mx-auto">
-                                <h5 class="mt-2">地域別-学校数ランキング</h5>
+                                <h5 class="mt-2">地域別 学校数ランキング</h5>
 
                                 <p>小・中・高の学校それぞれ校数を、地域別にランキング化しました。
                                 </p>
@@ -189,11 +186,11 @@
                 <div class="col-lg-6">
                     <div class="media mx-auto">
                         <a href="#" class="row align-items-center">
-                            <img data-src="./images/Dust.jpg"
+                            <img data-src="./images/index_areas_image4.jpg"
                                 class="img-fluid col-sm-6 mx-auto" alt="Generic placeholder image">
 
                             <div class="media-body row col-sm-6 mx-auto">
-                                <h5 class="mt-2">地域別-ゴミの収集日一覧</h5>
+                                <h5 class="mt-2">地域別 ゴミの収集日一覧</h5>
 
                                 <p>地域ごとに決まっているゴミの収集日を一覧にしてまとめました。
                                 </p>
@@ -210,14 +207,13 @@
                 <div class="col-lg-6">
                     <div class="media mx-auto">
                         <a href="#" class="row align-items-center">
-                            <img data-src="./images/Gourmet.jpg"
+                            <img data-src="./images/index_areas_image5.jpg"
                                 class="img-fluid col-12 col-md-6 mx-auto" alt="Generic placeholder image">
 
                             <div class="media-body row col-12 col-md-6 mx-auto">
                                 <h5 class="mt-2">人気グルメ店ランキング</h5>
 
-                                <p>福岡の人気グルメ店をランキング形式でまとめました。
-                                近くにこんなお店が！少し遠いけど行ってみたい！などなどたくさんの美味しいを発見しましょう！</p>
+                                <p>福岡の人気グルメ店をランキング形式でまとめました。<br>近くにこんなお店が！少し遠いけど行ってみたい！などなどたくさんの美味しいを発見しましょう！</p>
                                 <!--鉄板ネタ-->
                             </div>
                         </a>
@@ -227,14 +223,13 @@
                 <div class="col-lg-6">
                     <div class="media mx-auto">
                         <a href="#" class="row align-items-center">
-                            <img data-src="./images/Bar.jpg"
+                            <img data-src="./images/index_areas_image6.jpg"
                                 class="img-fluid col-sm-6 mx-auto" alt="Generic placeholder image">
 
                             <div class="media-body row col-sm-6 mx-auto">
-                                <h5 class="mt-2">地域別-居酒屋最安値はどこ？</h5>
+                                <h5 class="mt-2">地域別 居酒屋最安値はどこ？</h5>
 
-                                <p>どうせなら安くてたくさんお酒が飲めたほうがいいですよね？
-                                そんな情報を地域別にまとめました！</p>
+                                <p>どうせなら安くてたくさんお酒が飲めたほうがいいですよね？<br>そんな情報を地域別にまとめました！</p>
                                     <!--酒飲み達をターゲット。専用サイト作った方がいいかも。-->
                             </div>
                         </a>
@@ -250,6 +245,8 @@
     <footer id="footer">
         <div class="container">
             <div class="row mx-auto justify-content-center pt-4">
+              <!-- 20200426updstr shibazaki -->
+                <img src="images/logo_transparent2.png" alt="sumunara logo">
                 <div class="col-md-3">
                     <h5 class="col-12">住みたい</h5>
 
@@ -308,7 +305,7 @@
                         </li>
 
                         <li>
-                            <a href="#">サイトからのお知らせ</a>
+                            <a href="#">お知らせ</a>
                         </li>
 
                         <li>
@@ -328,7 +325,6 @@
             </div>
         </div>
     </footer>
-    <!-- Footerはコンテンツごとにスライドダウンさせてメニューを表示させる -->
     <!-- Footer -->
 
     <!-- Optional JavaScript -->
