Comment out social media icons for sign up and log in

--- a/login.html
+++ b/login.html
@@ -89,7 +89,8 @@
 
 			<div id="flex-container">
 				<!-- Social -->
-				<div class="col">
+				<!-- Uncomment when inplementing social accounts -->
+				<!-- <div class="col">
 					<p class="text-center">
 						Log in with your social media account
 					</p>
@@ -145,12 +146,12 @@
 							</div>
 						</button>
 					</div>
-				</div>
+				</div> -->
 				<!-- Social -->
 
-				<div id="divider-wrapper">
+				<!-- <div id="divider-wrapper">
 					<p id="or" class="text-center"><span>or</span></p>
-				</div>
+				</div> -->
 
 				<!-- Email form -->
 				<form id="login-form" class="col">
