--- a/signup.html
+++ b/signup.html
@@ -87,7 +87,8 @@
 
 			<div id="flex-container">
 				<!-- Social -->
-				<div class="col">
+				<!-- Uncomment when inplementing social accounts -->
+				<!-- <div class="col">
 					<p class="text-center">
 						ソーシャルメディアアカウントでサインアップする
 					</p>
@@ -143,18 +144,20 @@
 							</div>
 						</button>
 					</div>
-				</div>
+				</div> -->
 				<!-- Social -->
 
-				<div id="divider-wrapper">
+				<!-- Uncomment when inplementing social accounts -->
+				<!-- <div id="divider-wrapper">
 					<p id="or" class="text-center"><span>or</span></p>
-				</div>
+				</div> -->
 
-				<div id="btn-wrapper" class="col">
+				<!-- Uncomment when inplementing social accounts -->
+				<!-- <div id="btn-wrapper" class="col">
 					<button id="show-form-btn" class="btn">
 						<i class="far fa-envelope"></i>メールでサインアップ
 					</button>
-				</div>
+				</div> -->
 
 				<!-- Email form -->
 				<form id="signup-form" class="col">
@@ -249,11 +252,6 @@
 						<div class="invalid-feedback">
 							Passwords do not match.
 						</div>
-					</div>
-
-					<div class="form-check">
-						<input type="checkbox" class="form-check-input" />
-						<label class="form-check-label">Remember me</label>
 					</div>
 
 					<button type="submit" class="btn btn-warning">
@@ -358,7 +356,8 @@
 		</footer>
 		<!-- Footer -->
 
-		<script>
+		<!-- Uncomment when inplementing social accounts -->
+		<!-- <script>
 			// Show signup form on click
 			document
 				.getElementById("show-form-btn")
@@ -368,7 +367,7 @@
 					document.getElementById("signup-form").style.display =
 						"block";
 				});
-		</script>
+		</script> -->
 
 		<!-- Optional JavaScript -->
 		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
