Modify max width and spacing, remove navbar links for beta version

--- a/signup.html
+++ b/signup.html
@@ -32,7 +32,7 @@
 		<!-- Navbar -->
 		<nav class="navbar navbar-expand-lg navbar-light">
 			<div class="container">
-				<a class="navbar-brand" href="index.html">
+				<a class="navbar-brand" href="signup.html">
 					<img
 						src="images/logo_transparent2.png"
 						alt="sumunara logo"
@@ -57,15 +57,15 @@
 					id="navbarSupportedContent"
 				>
 					<ul class="navbar-nav">
-						<li class="nav-item">
+						<!-- <li class="nav-item">
 							<a class="nav-link" href="index.html">Home</a>
-						</li>
+						</li> -->
 
 						<li class="nav-item">
 							<a class="nav-link" href="login.html">Log in</a>
 						</li>
 
-						<li class="nav-item">
+						<!-- <li class="nav-item">
 							<a class="nav-link" href="signup.html"
 								>Sign up
 								<span class="sr-only">(current)</span></a
@@ -74,7 +74,7 @@
 
 						<li class="nav-item">
 							<a class="nav-link" href="#">Log out</a>
-						</li>
+						</li> -->
 					</ul>
 				</div>
 			</div>
@@ -179,7 +179,7 @@
 
 					<div class="form-group">
 						<label for="inputEmail"
-							><i class="far fa-envelope mr-2"></i>Email</label
+							><i class="fas fa-envelope mr-2"></i>Email</label
 						>
 
 						<input
@@ -346,10 +346,12 @@
 
 				<div id="copyright" class="text-center row align-items-center">
 					<p>
-						<img
-							src="images/logo_transparent2.png"
-							alt="sumunara logo"
-						/><span id="year"></span> MAD Works, LLC
+						<a href="signup.html">
+							<img
+								src="images/logo_transparent2.png"
+								alt="sumunara logo"
+							/><span id="year"></span> MAD Works, LLC
+						</a>
 					</p>
 				</div>
 			</div>
