--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 							>
 						</li>
 
-						<li class="nav-item">
+						<!-- <li class="nav-item">
 							<a class="nav-link" href="login.html">ログイン</a>
 						</li>
 
@@ -65,7 +65,7 @@
 							<a class="nav-link" href="signup.html"
 								>アカウント作成</a
 							>
-						</li>
+						</li> -->
 
 						<li class="nav-item">
 							<a class="nav-link" href="#">ログアウト</a>
