--- a/login.html
+++ b/login.html
@@ -32,7 +32,7 @@
 		<!-- Navbar -->
 		<nav class="navbar navbar-expand-lg navbar-light">
 			<div class="container">
-				<a class="navbar-brand" href="index.html">
+				<a class="navbar-brand" href="signup.html">
 					<img
 						src="images/logo_transparent2.png"
 						alt="sumunara logo"
@@ -57,7 +57,7 @@
 					id="navbarSupportedContent"
 				>
 					<ul class="navbar-nav">
-						<li class="nav-item">
+						<!-- <li class="nav-item">
 							<a class="nav-link" href="index.html">ホーム</a>
 						</li>
 
@@ -66,7 +66,7 @@
 								>ログイン
 								<span class="sr-only">(current)</span></a
 							>
-						</li>
+						</li> -->
 
 						<li class="nav-item">
 							<a class="nav-link" href="signup.html"
@@ -74,9 +74,9 @@
 							>
 						</li>
 
-						<li class="nav-item">
+						<!-- <li class="nav-item">
 							<a class="nav-link" href="#">ログアウト</a>
-						</li>
+						</li> -->
 					</ul>
 				</div>
 			</div>
@@ -274,10 +274,12 @@
 
 				<div id="copyright" class="text-center row align-items-center">
 					<p>
-						<img
-							src="images/logo_transparent2.png"
-							alt="sumunara logo"
-						/><span id="year"></span> MAD Works, LLC
+						<a href="signup.html">
+							<img
+								src="images/logo_transparent2.png"
+								alt="sumunara logo"
+							/><span id="year"></span> MAD Works, LLC
+						</a>
 					</p>
 				</div>
 			</div>
