--- a/newpass.html
+++ b/newpass.html
@@ -8,6 +8,12 @@
 			content="width=device-width, initial-scale=1, shrink-to-fit=no"
 		/>
 
+		<!-- Font Awesome -->
+		<script
+			src="https://kit.fontawesome.com/7b4d01730d.js"
+			crossorigin="anonymous"
+		></script>
+
 		<!-- Bootstrap CDN -->
 		<link
 			rel="stylesheet"
@@ -51,9 +57,9 @@
 					id="navbarSupportedContent"
 				>
 					<ul class="navbar-nav">
-						<li class="nav-item">
+						<!-- <li class="nav-item">
 							<a class="nav-link" href="index.html">ホーム</a>
-						</li>
+						</li> -->
 
 						<li class="nav-item">
 							<a class="nav-link" href="login.html">ログイン</a>
@@ -65,9 +71,9 @@
 							>
 						</li>
 
-						<li class="nav-item">
+						<!-- <li class="nav-item">
 							<a class="nav-link" href="#">ログアウト</a>
-						</li>
+						</li> -->
 					</ul>
 				</div>
 			</div>
@@ -75,11 +81,12 @@
 		<!-- Navbar -->
 
 		<!-- New Password -->
-		<form id="new-container">
-			<h1>パスワードのリセット</h1>
+		<form id="new-container" class="container">
+			<h3>パスワードのリセット</h3>
 			<div class="form-group">
 				<label for="inputUserName"
-					>ユーザー名 もしくは メールアドレス</label
+					><i class="fas fa-user mr-2"></i>ユーザー名 もしくは
+					メールアドレス</label
 				>
 
 				<input
@@ -91,7 +98,9 @@
 			</div>
 
 			<div class="form-group">
-				<label for="inputVerifyCode">確認コード</label>
+				<label for="inputVerifyCode"
+					><i class="fas fa-key mr-2"></i>確認コード</label
+				>
 
 				<input
 					type="text"
@@ -102,7 +111,9 @@
 			</div>
 
 			<div class="form-group">
-				<label for="inputVerifyCode">新しいパスワード</label>
+				<label for="inputVerifyCode"
+					><i class="fas fa-lock mr-2"></i>新しいパスワード</label
+				>
 
 				<input
 					type="text"
@@ -112,13 +123,13 @@
 				/>
 			</div>
 
-			<div class="form-group margin-top">
-				<button type="submit" class="btn btn-warning">登録</button>
+			<!-- <div class="form-group margin-top"> -->
+			<button type="submit" class="btn btn-warning">登録</button>
 
-				<button type="submit" class="btn btn-warning">
-					確認コードを再送する
-				</button>
-			</div>
+			<button type="submit" class="btn btn-warning">
+				確認コードを再送する
+			</button>
+			<!-- </div> -->
 		</form>
 
 		<!-- New Password -->
