--- a/resetpass.html
+++ b/resetpass.html
@@ -8,6 +8,12 @@
 			content="width=device-width, initial-scale=1, shrink-to-fit=no"
 		/>
 
+		<!-- Font Awesome -->
+		<script
+			src="https://kit.fontawesome.com/7b4d01730d.js"
+			crossorigin="anonymous"
+		></script>
+
 		<!-- Bootstrap CDN -->
 		<link
 			rel="stylesheet"
@@ -19,7 +25,7 @@
 		<link rel="icon" type="image/png" href="images/favicon.png" />
 		<link rel="stylesheet" href="./styles/style.css" />
 
-		<title>Sumunara | Foget Password</title>
+		<title>Sumunara | Reset Password</title>
 	</head>
 
 	<body>
@@ -51,9 +57,9 @@
 					id="navbarSupportedContent"
 				>
 					<ul class="navbar-nav">
-						<li class="nav-item">
+						<!-- <li class="nav-item">
 							<a class="nav-link" href="index.html">ホーム</a>
-						</li>
+						</li> -->
 
 						<li class="nav-item">
 							<a class="nav-link" href="login.html">ログイン</a>
@@ -65,9 +71,9 @@
 							>
 						</li>
 
-						<li class="nav-item">
+						<!-- <li class="nav-item">
 							<a class="nav-link" href="#">ログアウト</a>
-						</li>
+						</li> -->
 					</ul>
 				</div>
 			</div>
@@ -75,11 +81,12 @@
 		<!-- Navbar -->
 
 		<!-- Forget Password -->
-		<form id="forget-container">
-			<h1>パスワードのリセット</h1>
+		<form id="forget-container" class="container">
+			<h3>パスワードのリセット</h3>
 			<div class="form-group">
 				<label for="inputUserName"
-					>ユーザー名 もしくは メールアドレス</label
+					><i class="fas fa-user mr-2"></i>ユーザー名 もしくは
+					メールアドレス</label
 				>
 
 				<input
@@ -90,15 +97,13 @@
 				/>
 			</div>
 
-			<div class="form-group margin-top">
-				<button type="submit" class="btn btn-warning">
-					確認コードを送信
-				</button>
+			<button type="submit" class="btn btn-warning w-100">
+				確認コードを送信
+			</button>
 
-				<button type="submit" class="btn btn-warning">
-					ログイン画面に戻る
-				</button>
-			</div>
+			<button type="submit" class="btn btn-warning w-100">
+				ログイン画面に戻る
+			</button>
 		</form>
 
 		<!-- Forget Password -->
