--- a/results.html
+++ b/results.html
@@ -55,13 +55,13 @@
 							<a class="nav-link" href="index.html">Home</a>
 						</li>
 
-						<li class="nav-item">
+						<!-- <li class="nav-item">
 							<a class="nav-link" href="login.html">Log in</a>
 						</li>
 
 						<li class="nav-item">
 							<a class="nav-link" href="signup.html">Sign up</a>
-						</li>
+						</li> -->
 
 						<li class="nav-item">
 							<a class="nav-link" href="#">Log out</a>
