--- a/terms.html
+++ b/terms.html
@@ -51,9 +51,9 @@
 					id="navbarSupportedContent"
 				>
 					<ul class="navbar-nav">
-						<li class="nav-item">
+						<!-- <li class="nav-item">
 							<a class="nav-link" href="index.html">ホーム</a>
-						</li>
+						</li> -->
 
 						<li class="nav-item">
 							<a class="nav-link" href="login.html"
@@ -69,9 +69,9 @@
 							>
 						</li>
 
-						<li class="nav-item">
+						<!-- <li class="nav-item">
 							<a class="nav-link" href="#">ログアウト</a>
-						</li>
+						</li> -->
 					</ul>
 				</div>
 			</div>
@@ -79,7 +79,7 @@
 		<!-- Navbar -->
 
 		<!-- Terms and Conditions -->
-		<form id="terms-container">
+		<form id="terms-container" class="container">
 			<div class="terms-contents">
 				<div class="terms-head">
 					<h1>利用規約</h1>
